SDPA-5842 - Fixed textarea causing content shift on focus

--- a/src/static/css/openforms.css
+++ b/src/static/css/openforms.css
@@ -265,7 +265,7 @@ textarea {
     border-radius: .25rem !important;
     box-sizing: border-box !important;
     color: var(--ripple-extra-dark-neutral) !important;
-    padding: 1.05rem 1.25rem 1rem 1.25rem !important;
+    padding: 1rem 1.25rem !important;
 }
 
 input[type='text'],
